backend/add-task/manifests/backend_add_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-add-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-add-ai
  template:
    metadata:
      labels:
        app: backend-add-ai
    spec:
      containers:
        - name: backend-add-ai
          image: devacraifuture.azurecr.io/backend_add:f095dd380e057943ee878111a1d5a26a86d13af7
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
