backend/add-task/manifests/backend_add_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-add-svc-ai
spec:
  selector:
    app: backend-add-ai
  ports:
    - port: 9020
      targetPort: 5001
  type: LoadBalancer
